# VLSI-Compaction

./: .gitignore  Makefile  README.md  REPORT.md  UPSTREAM_LICENSE  pyproject.toml  requirements.txt
configs/: asap7.yaml  benchmarks.yaml  ca_rules.yaml  default.yaml  magic.yaml  rule110.yaml
data/demo/: demo_complex.cif  demo_simple.cif
data/synth/: cell_templates.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
outputs/tables/: baseline_results.csv  baseline_results.md
scripts/: build_docker.sh  convert_inputs.sh  export_gds.sh  fetch_benchmarks.sh  make_report.sh  run_ablation.sh  run_baseline.sh  run_ca_compaction.sh  run_compaction.sh  run_magic_drc.sh  run_synth.sh
src/backend/: command_runner.py  output_parser.py  perl_wrapper.py
src/ca/: __init__.py  composite_rules.py  epoch_scheduler.py  grid_discretizer.py  neighborhood.py  rule110.py  rule110_scheduler.py  rule_engine.py  state_encoder.py
src/eval/: ablation_runner.py  baseline_eval.py  ca_eval.py  magic_drc_helper.py  metrics_reporter.py  rule110_eval.py
src/geometry/: cell_template_loader.py  netlist_mapper.py  overlap_estimator.py  polygon_utils.py  region_partitioner.py  spatial_metrics.py  synthetic_generator.py
src/io/: benchmark_manifest.py  cif_reader.py  cif_writer.py  geometry_normalizer.py  ipsd_adapter.py  iscas_adapter.py  mag_reader.py  mag_writer.py
src/layout/: __init__.py  magic_runner.py  tech_handler.py
src/planning/: __init__.py  directional_pressure.py  (+4 more)
tests/: test_ca_engine.py  test_cif_io.py  test_geometry.py  test_magic.py  test_rule110.py
(+16 files in other folders)
