[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlsi-ca-compaction"
version = "0.1.0"
description = "Rule-based cellular automata compaction framework for VLSI physical design"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "shapely>=2.0",
    "tqdm>=4.65",
    "click>=8.1",
    "rich>=13.0",
    "networkx>=3.1",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
